force-app/main/default/objects/Asset/fields/LG_Actual_Winterize_Date__c.field-meta.xml
<CustomField>
    <fullName>LG_Actual_Winterize_Date__c</fullName>
    <description>Date the tech actually completed winterization. Used to schedule winter maintenance jobs.</description>
    <label>Actual Winterize Date</label>
    <type>Date</type>
</CustomField>