force-app/main/default/objects/Asset/fields/LG_Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>LG_Lifecycle_Status__c</fullName>
    <description>Asset lifecycle phase. Drives cascade Flows for seasonal job generation.</description>
    <label>Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Winterized</fullName>
                <default>true</default>
                <label>Winterized</label>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>