force-app/main/default/objects/Asset/fields/LG_Swim_Date__c.field-meta.xml
<CustomField>
    <fullName>LG_Swim_Date__c</fullName>
    <description>Date the pool opens for the season. Drives in-season recurring job start dates.</description>
    <label>Swim Date</label>
    <type>Date</type>
</CustomField>