force-app/main/default/objects/Asset/fields/LG_Winterize_Date_Target__c.field-meta.xml
<CustomField>
    <fullName>LG_Winterize_Date_Target__c</fullName>
    <description>Planned date for season-closing winterization.</description>
    <label>Winterize Date Target</label>
    <type>Date</type>
</CustomField>